--- a/.github/workflows/validate-md.yml
+++ b/.github/workflows/validate-md.yml
@@ -10,12 +10,12 @@ on:
 
 jobs:
   markdownlint:
-    name: Lint Markdown Files
+    name: Markdown Lint
     runs-on: ubuntu-latest
 
     steps:
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Node.js
         uses: actions/setup-node@v4
@@ -25,5 +25,5 @@ jobs:
       - name: Install markdownlint-cli
         run: npm install -g markdownlint-cli
 
-      - name: Lint Markdown files
+      - name: Run markdownlint with config
         run: markdownlint '**/*.md' -c .markdownlint.yml
