--- a/.github/workflows/validate-bash.yml
+++ b/.github/workflows/validate-bash.yml
@@ -8,6 +8,7 @@ on:
   pull_request:
     paths:
       - '**.sh'
+  workflow_dispatch:
 
 jobs:
   shellcheck-and-shfmt:
@@ -34,4 +35,4 @@ jobs:
       - name: Run shfmt
         run: |
           echo "Running shfmt formatting check..."
-          find . -type f -name '*.sh' -exec shfmt -d {} +
+          find . -type f -name '*.sh' -exec shfmt -i 2 -ci -d {} +
